--- a/AndreiWeb/appsettings.json
+++ b/AndreiWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+   "DefaultConnection": "Server:DESKTOP-QBFFURQ;Database=Andrei;Trusted_Connection=True;TrustServerCertificate=True;" 
+  }
 }
