--- a/AndreiWeb/appsettings.json
+++ b/AndreiWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "DefaultConnection": "Server:DESKTOP-QBFFURQ;Database=Andrei;Trusted_Connection=True;TrustServerCertificate=True;" 
+   "DefaultConnection": "Server=DESKTOP-QBFFURQ;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True;" 
   }
 }
