--- a/AndreiWeb/AndreiWeb.csproj
+++ b/AndreiWeb/AndreiWeb.csproj
@@ -15,4 +15,9 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AndreiWeb.DataAccess\AndreiWeb.DataAccess.csproj" />
+      <ProjectReference Include="..\AndreiWeb.Models\AndreiWeb.Models.csproj" />
+    </ItemGroup>
+
 </Project>
