--- a/AndreiWeb/AndreiWeb.csproj
+++ b/AndreiWeb/AndreiWeb.csproj
@@ -13,11 +13,18 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\AndreiWeb.DataAccess\AndreiWeb.DataAccess.csproj" />
       <ProjectReference Include="..\AndreiWeb.Models\AndreiWeb.Models.csproj" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
     </ItemGroup>
 
 </Project>
