--- a/.gitignore
+++ b/.gitignore
@@ -184,7 +184,7 @@ DocProject/Help/html
 
 # Click-Once directory
 publish/
-
+wwwroot/images/product/*
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
