--- a/AndreiWeb/appsettings.json
+++ b/AndreiWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "DefaultConnection": "Server=DESKTOP-QBFFURQ;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True;" 
+    "DefaultConnection": "Server=DESKTOP-QBFFURQ;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AndreiWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
